# mcp-authkit

./: .env.example  .gitignore  404.html  ARCHITECTURE.md  CHANGELOG.md  README.md  architecture.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
api/credentials/: index.html
api/jwt/: index.html
api/middleware/: index.html
api/oauth/: index.html
api/routes/: index.html
api/store/: index.html
docs/: architecture.md  index.md  quickstart.md
docs/api/: credentials.md  jwt.md  middleware.md  oauth.md  routes.md  store.md
mcpauthkit/: __init__.py  auth_middleware.py  auth_routes.py  jwt_validator.py
mcpauthkit/providers/: __init__.py  credentials_provider.py  oauth_provider.py
mcpauthkit/providers/templates/: base.html  credentials_entry.html  credentials_error.html  credentials_success.html  oauth_error.html  oauth_success.html
mcpauthkit/store/: __init__.py  base.py  encryption.py  factory.py  file_store.py  memory.py  redis_store.py
search/: search_index.json
tests/: conftest.py  test_auth_middleware.py  test_auth_routes.py  test_jwt_validator.py
tests/providers/: test_credentials_provider.py  test_oauth_provider.py
tests/store/: test_encryption.py  test_factory.py  test_file_store.py  test_memory.py  test_redis_store.py
