[project]
name = "mcp-authkit"
version = "0.1.0"
description = "Pluggable OAuth 2.0 + credentials elicitation library for FastMCP servers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "mcp>=1.6",
    "jinja2>=3.1",
    # Storage backends
    "cryptography>=42",          # Fernet encryption for file and redis modes
    "redis>=5; extra == 'redis'",  # optional — only needed for TOKEN_STORAGE_MODE=redis
]

[project.optional-dependencies]
redis = ["redis>=5"]

# Extra deps for running the experimental server (not needed to use the library)
experimental = [
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
include = ["mcpauthkit*"]

[tool.setuptools.package-data]
"mcpauthkit" = ["py.typed", "providers/templates/*.html"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["mcpauthkit"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "httpx>=0.27",
    "ruff>=0.9",
    "mypy>=1.11",
    "fakeredis>=2.0",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # function call in default arg (FastAPI patterns)
    "SIM117", # nested with — readability preference
]

[tool.ruff.lint.isort]
known-first-party = ["mcpauthkit"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
explicit_package_bases = true

