[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-authkit"
version = "0.2.0"
description = "Pluggable OAuth 2.0 + credentials elicitation library for FastMCP servers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "mcp>=1.6",
    "jinja2>=3.1",
    # Storage backends
    "cryptography>=42",          # Fernet encryption for file and redis modes
]

[project.urls]
Homepage = "https://github.com/masterela/mcp-authkit"
Documentation = "https://masterela.github.io/mcp-authkit/"
Repository = "https://github.com/masterela/mcp-authkit"
Changelog = "https://github.com/masterela/mcp-authkit/blob/main/CHANGELOG.md"

[project.optional-dependencies]
redis = ["redis>=5"]

# Extra deps for running the experimental server (not needed to use the library)
experimental = [
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
include = ["mcpauthkit*"]

[tool.setuptools.package-data]
"mcpauthkit" = ["py.typed", "providers/templates/*.html"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["mcpauthkit"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "httpx>=0.27",
    "ruff>=0.9",
    "mypy>=1.11",
    "fakeredis>=2.0",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # function call in default arg (FastAPI patterns)
    "SIM117", # nested with — readability preference
]

[tool.ruff.lint.isort]
known-first-party = ["mcpauthkit"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
explicit_package_bases = true

